EWL-8512: Fix mobile margin issues and horizontal scroll.

--- a/styleguide/source/assets/scss/03-organisms/_membership.scss
+++ b/styleguide/source/assets/scss/03-organisms/_membership.scss
@@ -267,8 +267,8 @@ a.ama__membership {
   .ama__category-index, .ama__subcategory-index {
     .ama__membership {
       position: relative;
-      right: 5.5px;
-      margin: 0px -34px;
+      margin-left: -22px;
+      margin-right: -22px;
     }
   }
 }
